# ironbank-pipeline

./: .bandit  .bash_history  .coveragerc  .editorconfig  .gitignore  .gitlab-ci.yml  .prettierignore  .pylintrc  .pylinttestrc  Makefile  README.md  YaraTestInGitlab.md  build_vars.sh  code_checker.sh  conftest.py  contributing.md  deps_diagram.md  pylama.ini  pyproject.toml  pytest.ini  renovate.json  requirements.txt  subprocess_checker.py  trufflehog-config.yaml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.gitlab/issue_templates/: Default.md  Enhance_Feature.md  IB_AMA_Documentation.md  Nexus_Proxy_Addition.md  Quick_Fix_Add.md  bug.md  enhancement.md  feature_request.md  generic.md
.gitlab/merge_request_templates/: Default.md
.gitlab/merge_requests_templates/: generic_merge.md
ci/: new_tag.py
gitlab-templates/: security.yaml
ironbank/pipeline/: abstract_artifacts.py  access_log_parser.py  anchore.py  apis.py  artifacts.py  base_image.py  file_parser.py  get_oscap_failures.py  harbor.py  hardening_manifest.py  image.py  project.py  renovate_json.py  sbom_parser.py  stargate.py  vat_container_status.py
ironbank_py39_modules/: README.md
ironbank_py39_modules/scanner_api_handlers/: anchore.py
jobs/preflight/: base.yaml
kickoff_staging_pipeline/: AWS_PROFILE=il2-staging aws ssm start-se.yml  README.md  config.yaml  config.yaml.example  kickoff.py  secrets.yaml  secrets.yaml.example  update_projects.py
kickoff_staging_pipeline/templates/: .gitlab-ci.yml.j2
mocks/: mock_anchore_compliance.json  mock_classes.py  mock_responses.py
modules/: anchore.py  artifacts.py  file_parser.py  hardening_manifest.py  vat_api.py  vat_container_status.py
modules/test/: test_anchore.py  test_apis.py  test_artifacts.py  test_decorators.py  test_file_parser.py  test_finding_status.py  test_hardening_manifest.py  test_logger.py  test_package_parser.py  test_project.py
modules/utils/: decorators.py  package_parser.py  testing.py  types.py
pipeline/: __init__.py  common.py  constants.py  dccscrImport.py  test_common.py
pipeline/resources/: contributor_resource.py  docker_resource.py  downloader.py  file_resource.py  http_resource.py  s3_resource.py  wl_compare_lint.py
pipeline/tests/: test_common.py  (+1 more)
pipeline1/: README.md  base.yaml
pipeline2/: base.yaml
schema/: hardening_manifest.schema-relaxed.json  hardening_manifest.schema.json  ironbank.schema.json  ironbank_findings.schema.json  renovate-schema.json  vat_findings.schema.json  vat_findings.swagger.yaml
scripts/: README.md  ca_chain  ci_config_path.py  compliance_output_report.xml  create-delegation.sh  create-root.sh  delegation.crt  gen-root-and-delegate.sh  generate-ironbank-yaml.py  get_tags_harbor.py  gitlab-project-settings.py  gitlab_project_settings.py  initialize-gun.sh  local-delegation.sh  local_build_vars.sh  markdown_toc_generator.py  post-build-clamav.sh  requirements.txt  root.crt  swagger_to_jsonschema.py  tmp.py
templates/: .default.yaml.swp  .globals.yaml.swp  README.md  aio.yaml  alpine.yaml  base.yaml  chainguard.yaml  cut-tag.yaml  cut_tag.yaml  debian.yaml  default.yaml  development.yaml  distroless.yaml  distroless.yml  globals.yaml  harbor-test.sh  ironbank.yaml  s3-test.sh  scan.yaml  setup_modules.yaml  shared_vars.yaml  suse.yaml  trigger-jobs.yaml  trigger.yaml  ubi.yaml  ubi.yml  ubuntu.yaml  ubuntu.yml  version.py
(+563 files in other folders)
