[tool.poetry]
name = "ibmodules"
version = "0.1.0"
description = ""
authors = ["Iron Bank Pipelines and Operations <ironbank@dsop.io>"]

packages = [
    { include = "ironbank" }
]

[tool.poetry.dependencies]
python = "^3.10"
boto3 = "^1.24.4"
gitpython = "^3.1.27"
jsonschema = "^4.6.0"
openpyxl = "^3.0.10"
pandas = "^1.4.2"
python-gitlab = "^3.5.0"
requests = "^2.27.1"
pyyaml = "^6.0"
types-requests = "^2.28.11.8"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
pytest = "^7.1.2"
pytest-cov = "^3.0.0"
pylama = "^8.4.1"

[build-system]
requires = ["poetry-core==1.0.8"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
disallow_untyped_defs = "True"
check_untyped_defs = "True"
show_error_codes = "True"
warn_unused_ignores = "True"
no_implicit_optional = "True"
warn_return_any = "True"
ignore_missing_imports = "True"
exclude = ['test_',]
