[tool.poetry]
name = "ibmodules"
version = "0.1.0"
description = ""
authors = ["Iron Bank Pipelines and Operations <ironbank@dsop.io>"]

packages = [
    { include = "ironbank" }
]

[tool.poetry.dependencies]
python = "^3.10"
boto3 = "^1.24.4"
gitpython = "^3.1.27"
jsonschema = "^4.6.0"
openpyxl = "^3.0.10"
pandas = "^1.4.2"
python-gitlab = "^3.5.0"
requests = "^2.28.0"
pyyaml = "^6.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
pytest-cov = "^3.0.0"
pylama = "^8.4.1"
pylint = "^2.16.1"
mypy = "^1.0.0"
jinja2 = "^3.1.2"
pysocks = "^1.7.1"
types-pyyaml = "^6.0.12.4"
types-requests = "^2.28.11.8"

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"

[build-system]
requires = ["poetry-core==1.0.8"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
disallow_untyped_defs = "True"
check_untyped_defs = "True"
show_error_codes = "True"
warn_unused_ignores = "True"
no_implicit_optional = "True"
warn_return_any = "True"
ignore_missing_imports = "True"
exclude = ['test_',]
